@@ -208,10 +208,6 @@ ACE_HAS_STDARG_THR_DEST                 Platform has void (*)(...)
                                         prototype for
                                         pthread_key_create()
                                         destructor (e.g., LynxOS).
-ACE_HAS_STL_MAP_CONFLICT                Used when users want to
-                                        compile ACE with STL and STL
-                                        map class conflicts with
-                                        <net/if.h> map struct.
 ACE_HAS_WIN32_STRUCTURAL_EXCEPTIONS     Platform/compiler supports
                                         Win32 structural exceptions
 ACE_HAS_READ_TIMEDWAIT
