@@ -24,18 +24,9 @@
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#include /**/ <net/if.h>
+
 #if !defined (ACE_LACKS_NET_IF_H)
-   // This part if to avoid STL name conflict with the map structure
-   // in net/if.h.
-#  if defined (ACE_HAS_STL_MAP_CONFLICT)
-#    define map _Resource_Allocation_Map_
-#  endif /* ACE_HAS_STL_MAP_CONFLICT */
-   extern "C" {
-#  include /**/ <net/if.h>
-   }
-#  if defined (ACE_HAS_STL_MAP_CONFLICT)
-#    undef map
-#  endif /* ACE_HAS_STL_MAP_CONFLICT */
 #  if defined (HPUX) && defined (IOR)
    /* HP-UX 11.11 defines IOR in /usr/include/pa/inline.h
       and we don't want that definition.  See IOP_IORC.h.
